src/objects/BMCServiceDesk__DiscoveryAuditLog__c.object
<CustomObject>
    <description>Stores details about Remedyforce Discovery Server events - server creation or deletion request, change or reset password, enabling or disabling Remedyforce discovery, alert email messages sent, success or failure messages sent to keep the server alive.</description>
    <fields>
        <fullName>BMCServiceDesk__Comment__c</fullName>
        <description>Stores a text comment related to the operation corresponding to the log entry.</description>
        <inlineHelpText>Stores a text comment related to the operation corresponding to the log entry.</inlineHelpText>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ErrorMessage__c</fullName>
        <description>Stores error message (if any) captured during the operation corresponding to the log entry.</description>
        <inlineHelpText>Stores error message (if any) captured during the operation corresponding to the log entry.</inlineHelpText>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Operation__c</fullName>
        <description>Stores the name of the operation performed corresponding to the log entry.</description>
        <inlineHelpText>Stores the name of the operation performed corresponding to the log entry.</inlineHelpText>
        <label>Operation ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Discovery Audit Log</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Log#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>